# pico_rc_mqtt

./: README.md  README.md.bak  ansi2html.py  ccgbackend.py  controller.py  ctrl_client.py  ctrl_client_auto.py  ctrl_client_gui_arc.py  ctrl_client_gui_exp.py  ctrl_client_old.py  ctrl_test.bat  delay.py  gui_test.bat  local_client_test.py  local_test.bat  matlab_bitfield.py  node_red_nt  pwm_prober.py  rc_client.py  rc_client.py.bak  rc_config.py  rcs_parser.py  script0.rcs  script1.rcs  script2.rcs  script_demo.rcs  simple_demo.rcs  start_broker.bat  steer  test0.rcs  uart.py
C/: CMakeLists.txt  lwipopts.h
C/experimental/: CMakeLists.txt
C/experimental/archive/: queue.h
C/experimental/inc/adc/: battery_monitor.c  battery_monitor.h
C/experimental/inc/bno_pico/: bno_controller.c  bno_controller.h
C/experimental/inc/esp_uart/: esp_uart.c  esp_uart.h
C/experimental/inc/imu/: main.cpp  mpu6050_DMP_port.cpp  mpu6050_DMP_port.h
C/experimental/inc/pwm/: pwm_driver.c
C/experimental/inc/ultra/: hcsr04.c
C/experimental/inc/ultra/util/: smooth_average.h  smooth_filter.h
C/experimental/src/: main.c  mqtt_helper.h  rc_config.h
C/inc/imu/: mpu6050_DMP_port.cpp  mpu6050_DMP_port.h
C/minimal/: CMakeLists.txt
C/minimal/inc/adc/: battery_monitor.c  battery_monitor.h
C/minimal/inc/bno_pico/: test.c
C/minimal/inc/bno_pico/lib/BNO055_driver/: bno055.c
C/minimal/inc/esp_uart/: esp_uart.c  esp_uart.h
C/minimal/inc/imu/: helper_3dmath.h  mpu6050_DMP_port.cpp
C/minimal/inc/ultra/util/: nbt.h  smooth_average.h
C/minimal/src/: main.c  rc_config.h
C/old code/: motor_test.c  mqtt.h  wifi_temp2.c
C/src/: main.c  mqtt.c  mqtt_helper.h  rc_config.h  rc_mqtt.h  wifi_test.c
C/stable/: CMakeLists.txt
C/stable/old code/: mqtt.c  wifi_temp.c
C/stable/src/: main.c
MATLAB/: Delay.m  echo_.m  encode_message.m  gui.mlapp  move_motors.m  pub.m  rc_config.m  rc_ml.m  tolani.m
Node-RED/: chart_flow.json  flows.json  node_red_nt.json
camera/: client0_cam.py  ml_module.py  rc_config.py
camera/ESP32-CAM-FW/src/: main.cpp
